<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>eu.arrowhead</groupId>
	<artifactId>arrowhead-common</artifactId>
	<version>5.0.0</version>
	<packaging>pom</packaging>
	<name>ah5-common-java-spring</name>
	<description>Arrowhead 5Gen Core Common using Spring Boot</description>

	<url>https://github.com/Aitia-IIOT/ah5-common-java-spring</url>
	<!-- TODO: License -->
  	
	<properties>
		<java.version>21</java.version>
		<mvn.compiler.version>3.13.0</mvn.compiler.version>
		<mvn.compile.target>21</mvn.compile.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	
	<modules>
		<module>data-transfer-objects</module>
		<module>common-utils</module>
	</modules>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
    		<groupId>org.springframework.boot</groupId>
    		<artifactId>spring-boot-starter-webflux</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.springframework.boot</groupId>
    		<artifactId>spring-boot-configuration-processor</artifactId>
    		<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-quartz</artifactId>
		</dependency>
		<dependency>
      		<groupId>org.springdoc</groupId>
      		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      		<version>2.0.1</version>
   		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<defaultGoal>clean install</defaultGoal>
		<plugins>
			<plugin>
	        	<artifactId>maven-compiler-plugin</artifactId>
	        	<version>${mvn.compiler.version}</version>
	        	<configuration>
	        		<source>${mvn.compile.target}</source>
	         		<target>${mvn.compile.target}</target>
	        	</configuration>
	      	</plugin>
			<plugin>
			 	<groupId>org.apache.maven.plugins</groupId>
			 	<artifactId>maven-checkstyle-plugin</artifactId>
			 	<version>3.4.0</version>
			 	<dependencies>
		            <dependency>
		              <groupId>com.puppycrawl.tools</groupId>
		              <artifactId>checkstyle</artifactId>
		              <version>10.17.0</version>
		            </dependency>
		        </dependencies>
		 		<configuration>
					<consoleOutput>true</consoleOutput>
					<includeTestSourceDirectory>true</includeTestSourceDirectory>
					<configLocation>https://raw.githubusercontent.com/Aitia-IIOT/aitia-java-styling/master/aitia_checkstyle_checks.xml</configLocation>
					<failOnViolation>false</failOnViolation>
				</configuration>
				<executions>
					<execution>
						<id>validate</id>
						<phase>validate</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
